[gd_scene load_steps=2 format=3 uid="uid://c58m3x5oxyg0g"]

[ext_resource type="Script" uid="uid://bfp5qrv2r3gdk" path="res://minigames/ChooseTheCard/ChooseTheCard.gd" id="1_n4fvp"]

[node name="ChooseTheAce" type="Node2D"]
script = ExtResource("1_n4fvp")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0.10980392, 0.12156863, 0.13333334, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="Panel" parent="UI"]
modulate = Color(0.2, 0.2, 0.3, 1)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 60.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="ScoreLabel" type="Label" parent="UI/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Puntos: 0"
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="UI/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Tiempo: 0"
vertical_alignment = 1

[node name="RoundLabel" type="Label" parent="UI/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Ronda: 1/3"
vertical_alignment = 1

[node name="DifficultyLabel" type="Label" parent="UI/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Dificultad: "
vertical_alignment = 1

[node name="Instructions" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.5
offset_top = -82.5
offset_right = 264.5
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "¡Sigue a la reina de corazones!
3 rondas, de dificultad creciente.
Pincha rápido sobre la carta, se valora la velocidad!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GameOverLabel" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "TIEMPO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardsContainer" type="Node2D" parent="."]

[node name="ResponseTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="timeout" from="ResponseTimer" to="." method="_on_response_timer_timeout"]
